--- a/public/styles.css
+++ b/public/styles.css
@@ -217,14 +217,15 @@ header a {
 }
 
 .share-links i {
+  font-size: 1.1rem;
   display: inline-block;
   margin-left: 2px;
-  font-size: 1.1rem;
 }
 
 .share-links a {
   text-decoration: none;
   color: inherit;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 770px) {
